app/assets/stylesheets/layout.css
html, body, input, textarea, select, td{
  font-family: verdana, tahoma, arial;
  font-size: 12px;
  color: black;
}

html, body, html > body > center{
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
}

body{
  background: url("/gfx/body_bg.jpg") 0 0 repeat;
}

a:link, a:visited{
  color: #698295;
  text-decoration: none;
}

a:active, a:hover{
  color: #272727;
  text-decoration: none;
}

table.main_table{
  height: 100%;
  width: 1500px;
  border-top: none;
  border-bottom: none;
  text-align: left;
}

td.main_logo{
  font-size: 24px;
  padding: 15px;
  padding-left: 28px;
  height: 40px;
}

div.main_menu_outer{
  position: relative;
  height: 19px;
}

div.main_menu_inner{
  position: absolute;
  top: -15px;
  font-size: 16px;
}

.main_menu_inner a {
  margin-right: 12px;
}

td.main_bottom{
  text-align: center;
  padding: 4px;
  background-color: #ffffff;
  height: 25px;
}

td.main_corner_top_left{
  width: 41px;
  height: 41px;
  background: url("/gfx/main_box_top_left.png") 0 0 no-repeat;
}

td.main_corner_top_right{
  width: 41px;
  height: 41px;
  background: url("/gfx/main_box_top_right.png") 0 0 no-repeat;
}

td.main_side_top{
  height: 41px;
  background: url("/gfx/main_box_top.png") 0 0 repeat-x;
}

td.main_side_left{
  width: 41px;
  background: url("/gfx/main_box_left.png") 0 0 repeat-y;
}

td.main_side_right{
  width: 41px;
  background: url("/gfx/main_box_right.png") 0 0 repeat-y;
}

td.main_body{
  background-color: #ffffff;
  vertical-align: top;
}

table.box{
  border: none;
}

td.box_header{
  font-weight: bold;
  white-space: nowrap;
  text-align: right;
  background-color: #666666;
  padding: 5px;
  color: #d9d9d9;
}

td.box_header_spacer{
  width: 27%;
}

td.box_content{
  border: 1px solid #666666;
  padding: 7px;
  padding-right: 14px;
  background-color: #ffffff;
}

.buttons{
  text-align: right;
}

table.form, table.list{
  width: 100%;
}

thead > tr > th{
  font-size: 12px;
  text-align: left;
  white-space: nowrap;
}

td.tdt, td.tdcheck{
  font-weight: bold;
  white-space: nowrap;
}

td.tdc{
  width: 100%;
}

td.tdd, div.tdd{
  color: grey;
  padding-top: 0px;
  padding-bottom: 7px;
  font-size: 10px;
}

td.tdr, th.tdr{
  text-align: right;
}

.error{
  font-style: italic;
}

td.error{
  text-align: center;
}

input, select, textarea{
  border: 1px solid #bbbbbb;
  background-color: #ffffff;
  color: #000000;
  padding: 4px;
}

input[type=button], input[type=submit], input.button, a.button {
  border: 1px solid #989898;
  background: url("/gfx/button_bg.png") 0 0 repeat-x;
  font-size: 12px;
  padding: 2px 9px 2px 9px;
  margin: 0px 0px 0px 0px;
  color: black;
}

input[type=checkbox]{
  border: none;
  background-color: transparent;
}

input.input_text, input.input_password, select.input_select, textarea.input_textarea{
  width: 100%;
}

.align-right {
  text-align: right;
}

.nowrap{
  white-space: nowrap;
}

.flash {
  border: 1px solid black;
  border-radius: 3px;
  padding: 6px;
  margin-bottom: 20px;
}

.flash-error, .flash-alert {
  background-color: #ffd9d9;
}

.flash-notice {
  background-color: #e0ffde;
}

